# tree-sitter-plain

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-plain.pc.in
bindings/c/tree_sitter/: tree-sitter-plain.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_plain/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPlainTests/: TreeSitterPlainTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: welcome.txt
